--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <li>Playing games</li>
         <li>Coding</li>
         <li>Learning new tech</li>
-        <li>Vising new places</li>
+        <li>Visiting new places</li>
         <li>Watching Manga and Anime</li>
         <li>Martial arts</li>
     </ol>
