index file for page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rakshit's Personal Site</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <table cellspacing="20">
@@ -18,24 +19,24 @@
             </td>
         </tr>
     </table>
-    <hr size="3" noshade>
+    <hr>
     <h3>Education</h3>
     <p><strong>Studied at:</strong><a href="http://meerutpublicschool.edu.in/"> Meerut Public School</a></p>
     <p><strong>Stream:</strong> Science(PCM)</p>
     <p><strong>Currently Studying at:</strong> Graphic Era University, Dehradun</p>
     <p><strong>Course:</strong> B.Tech</p>
     <p>Branch: Computer Science</p>
-    <hr size="3" noshade>
+    <hr>
     <h3>My Hobbies</h3>
     <ol>
         <li>Playing games</li>
         <li>Coding</li>
         <li>Learning new tech</li>
-        <li>Visiting new places</li>
+        <li>Vising new places</li>
         <li>Watching Manga and Anime</li>
         <li>Martial arts</li>
     </ol>
-    <hr size="3" noshade>
+    <hr>
     <h3>Skills</h3>
     <table border="1">
         <tr>
@@ -77,11 +78,11 @@
             </table></td>
         </tr>
     </table>
-    <hr size="3" noshade>
-    <h4>Contact me at:</h4>
+    <hr>
+    <h3>Contact</h3>
     <p><strong>Phone Number: </strong>9410605466</p>
     <p><strong>Email:</strong> kartikkaushik544@gmail.com</p>
-    <hr size="3" noshade>
+    <hr>
     <h4>Answer some questions for me:</h4>
     <form action="mailto:kartikkaushik544@gmail.com" method="POST">
         <label>Today's Date: </label>
@@ -99,4 +100,4 @@
         <input type="submit">
     </form>
 </body>
-</html>
+</html> 
